# ImageDiff-Tauri

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: publish.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
